--- a/app/src/main/res/values/ic_arrrow_right_background.xml
+++ b/app/src/main/res/values/ic_arrrow_right_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_arrrow_right_background">#2379D4</color>
+    <color name="ic_arrrow_right_background">#3D9CDC</color>
 </resources>
