--- a/app/src/main/res/layout/view_for_child_row.xml
+++ b/app/src/main/res/layout/view_for_child_row.xml
@@ -1,62 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:background="#A5A2A2"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
+
+    <TextView
+        android:id="@+id/txtNotificationHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
 
         <TextView
-            android:id="@+id/txtNotificationHeader"
             android:layout_width="wrap_content"
-            android:text="PPE - No Harness"
-            android:textSize="12sp"
-            android:layout_margin="5dp"
-            android:layout_height="wrap_content"/>
-        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="Zone :"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/txtNotificationSubZone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/txtNotificationDate"
             android:layout_width="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="Zone :"
-                android:textSize="12sp"
-                android:layout_marginLeft="5dp"
-                android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/txtNotificationSubZone"
-                android:layout_width="match_parent"
-                android:textSize="12sp"
-                android:layout_marginLeft="5dp"
-                android:text="Mask -1"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/txtNotificationDate"
-                android:layout_width="wrap_content"
-                android:text="12-29-21"
-                android:textSize="12sp"
-                android:layout_marginLeft="5dp"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text=" | "
-                android:textSize="12sp"
-                android:layout_marginLeft="5dp"
-                android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text=" | "
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
 
-            <TextView
-                android:id="@+id/txtNotificationTime"
-                android:layout_width="match_parent"
-                android:textSize="12sp"
-                android:layout_marginLeft="5dp"
-                android:text="10.59 pm"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/txtNotificationTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
     </LinearLayout>
+
+</LinearLayout>
