--- a/app/src/main/res/layout/view_for_child_row.xml
+++ b/app/src/main/res/layout/view_for_child_row.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#A5A2A2"
-    android:orientation="vertical"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginTop="1dp"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:id="@+id/linChild"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/txtNotificationHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_margin="5dp"
-        android:textSize="16sp" />
+        android:textSize="@dimen/txt_small_size" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -25,7 +32,7 @@
             android:layout_marginStart="5dp"
             android:text="Zone :"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="@dimen/txt_small_size" />
 
         <TextView
             android:id="@+id/txtNotificationSubZone"
@@ -33,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="@dimen/txt_small_size" />
     </LinearLayout>
 
     <LinearLayout
@@ -46,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="@dimen/txt_small_size" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -54,7 +61,7 @@
             android:layout_marginStart="5dp"
             android:text=" | "
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="@dimen/txt_small_size" />
 
 
         <TextView
@@ -63,8 +70,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="@dimen/txt_small_size" />
 
     </LinearLayout>
 
 </LinearLayout>
+</androidx.cardview.widget.CardView>
