--- a/app/src/main/res/layout/view_for_header_row.xml
+++ b/app/src/main/res/layout/view_for_header_row.xml
@@ -1,85 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
     android:layout_marginTop="10dp"
-    android:layout_height="wrap_content">
+    android:layout_marginEnd="8dp">
 
     <LinearLayout
         android:id="@+id/linParent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="7"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtNotificationHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/txt_small_size" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:text="Zone :"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/txt_small_size" />
-
-                <TextView
-                    android:id="@+id/txtNotificationSubZone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/txt_small_size" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txtNotificationDate"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/txt_small_size" />
+                    android:layout_marginTop="5dp">
 
-                <TextView
+                    <TextView
+                        android:id="@+id/txtNotificationHeader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/txt_small_size" />
+
+                    <TextView
+                        android:id="@+id/txtBadge"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/badge_circle_background"
+                        android:gravity="center"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="Zone :"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/txt_small_size" />
+
+                    <TextView
+                        android:id="@+id/txtNotificationSubZone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/txt_small_size" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:text=" | "
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
+                    android:layout_marginTop="5dp">
+
+                    <TextView
+                        android:id="@+id/txtNotificationDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/txt_small_size" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text=" | "
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
 
 
-                <TextView
-                    android:id="@+id/txtNotificationTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/txt_small_size" />
+                    <TextView
+                        android:id="@+id/txtNotificationTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/txt_small_size" />
+
+                </LinearLayout>
 
             </LinearLayout>
-
         </LinearLayout>
 
         <FrameLayout
